--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 
   <div id='slide_nav'>
-    <p id="slide_nav_button">☰</p>
+    <img src="../../assets/Logotipo.png" id="slide_nav_button">
   </div>
   <div  id='slide_menu'>
     <ul >
