--- a/src/app/secciones/foro/foro.component.css
+++ b/src/app/secciones/foro/foro.component.css
@@ -155,3 +155,16 @@ main {
     grid-template-columns: 1fr;
   }
 }
+
+.respuesta_fija{
+  display:flex;
+  justify-content: space-between;
+}
+
+.texto_respuesta{
+  margin:2%;
+}
+.form-control{
+  width: 1%;
+  height: 1%;
+}
