--- a/src/app/secciones/guiones/guiones.component.css
+++ b/src/app/secciones/guiones/guiones.component.css
@@ -3,6 +3,10 @@
   padding:0 px;
 }
 
+.contenido_derecha{
+  margin: 5%;
+}
+
 .izquierda{
   height: 100vh;
   width: 50%;
@@ -13,13 +17,13 @@
  background-size: cover;
  background-position: center;
  width: 50%;
- height: 100vh;
+ height: auto;
  justify-content: space-between;
 }
 
 .parrafo{
   text-align: justify;
-  margin: 5px;
+  margin: 2%;
 }
 
 #pantalla{
@@ -28,11 +32,10 @@
 }
 
 .cuadricula{
-  width: 95%;
+
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  background: lightblue;
   justify-content: space-between;
 }
 .proyectos{
@@ -40,31 +43,91 @@
 }
 
 .item{
-  margin-top: 5px;
-  background: gray;
-  color: #fff;
+  border-radius: 5%;
+  margin-top: 1%;
+  background: white;
+  color: gray;
   flex:none;
-  width: calc((100% - 20px )/ 3);
-
-  @media screen and (min-width: 600px) {
-    width: calc((100% - 30px) / 4);
-  }
-
-  @media screen and (min-width: 800px) {
-    width: calc((100% - 40px) / 5);
-  }
-
+  width: calc((100% - 3% )/ 3);
+  height: 25vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
 }
+/*.icono{
+  border-left: 10px;
+  border-radius: 50%;
+  border:10px solid #666;
 
+}*/
 
+.ImgRedonda{
+  border: black 1px solid;
+  border-radius: 50%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  height: 75%;
+  width: 75%;
+}
 
+.item p{
+  text-align: center;
+}
+
+/*-----------------------------------------------Estilos Modales------------------------------------------*/
+
+/*--------------------------------------------------Eliminar----------------------------------------------*/
 .botones ul li{
-  padding:10px;
+  padding:2%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.modal-footer{
+  display: flex;
+  justify-content: space-between;
+}
+.Texto_Buscar{
+  display: flex;
+  justify-content: space-between;
+}
+.form-control{
+  background-color: #37A1F4;
+  border-radius: 20px;
+  color:#fff;
+}
+.Buscar{
+  display:flex;
+  justify-content: space-between;
+}
+.Eliminar_Boton{
+
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+/*--------------------------------------------------Editar-----------------------------------------------*/
+
+
+/*--------------------------------------------------Agregar----------------------------------------------*/
+
+.modal_imagen{
+  border: black 1px solid;
+}
+.imagen_cortos{
+  border-radius: 50%;
+  width: 30%;
+  height: 30%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+
+#boton_agregar{
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+.modal-content{
+  border-radius: 5%;
 }
