--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,25 @@
     <header>
     <div class="wrapper">
-      <img id="logo2d" src="../../assets/2D.png">
+      <a href="animacion"><img id="logo2d" src="../../assets/2D.png"></a>
     </div>
     <div class="hed">
-      <img id="logo3d" [src]="imgsrc" (mouseover)="imgsrc = '../../assets/3D.gif'" (mouseout)="imgsrc = '../../assets/3D.png'">
+      <a href="animacion"><img id="logo3d" [src]="imgsrc" (mouseover)="imgsrc = '../../assets/3D.gif'" (mouseout)="imgsrc = '../../assets/3D.png'"></a>
     </div>
   </header>
   <footer>
       <div class="mesa">
         <div class="hed1">
-          <img id="logoguiones" src="../../assets/guiones2.png">
+          <a href="guiones"><img id="logoguiones" src="../../assets/guiones2.png"></a>
+
         </div>
         <div class="hed2">
-          <img id="logoaudio" src="../../assets/audio.png">
+          <a href="audiovideo"><img id="logoaudio" src="../../assets/audio.png"></a>
         </div>
         <div class="hed3">
-          <img id="logoprogramacion" src="../../assets/promagramacion.png">
+          <a href="programacion"><img id="logoprogramacion" src="../../assets/promagramacion.png"></a>
         </div>
         <div class="hed4">
-          <img id="logorealidad" src="../../assets/realidad.png">
+          <a href="aplicacion"><img id="logorealidad" src="../../assets/realidad.png"></a>
         </div>
        </div>
     </footer>
