--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,69 +1,69 @@
 *{
     margin: 0 auto;
     padding: 0;
-    list-style: none;	
-    text-decoration: none;	
-    border: none; 
+    list-style: none;
+    text-decoration: none;
+    border: none;
     outline: none;
 }
-header .wrapper{
-    width: 10%; 
+header .wrapper a{
+    width: 10%;
     height: 350px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-left: 20px;
     margin-right: 100px;
     margin-top: 35px;
 }
-header .hed{
-    width: 140%; 
+header .hed a{
+    width: 140%;
     height: 350px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-left: 120px;
     margin-right: 100px;
     margin-top: -350px;
 }
-footer .mesa .hed1{
+footer .mesa .hed1 a{
     height: 280px;
     width: 280px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     margin-top: 60px;
     margin-left: -50px;
 }
-footer .mesa .hed2{
+footer .mesa .hed2 a{
     height: 280px;
     width: 280px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     margin-top: -250px;
     margin-left: 250px;
 }
-footer .mesa .hed3{
+footer .mesa .hed3 a{
     height: 280px;
     width: 280px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     margin-top: -320px;
     margin-left: 570px;
 }
-footer .mesa .hed4{
+footer .mesa .hed4 a{
     height: 250px;
     width: 250px;
     margin: 0 auto;
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     margin-top: -240px;
     margin-left: 890px;
@@ -113,4 +113,3 @@ footer .mesa .hed4{
       grid-template-columns: 1fr;
     }
   }
-  
