--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
 
-    <app-menu> </app-menu>
-
-
+    <div>
+      <app-menu> </app-menu>
+    </div>
 
     <div class="d-flex justify-content-end" id="navbarColor01">
 
