Cambios Front - Secciones
Cambio front secciones

--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -9,3 +9,14 @@
  margin: 0 auto;
     
 }
+
+.fondoblanco{
+    width: max-content;
+    background-color: white;
+    background-size: cover;
+}
+
+
+.btn-redo{
+    border-radius: 10px;
+  }
