--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 
 
-
+<div class="container mb-5">
 <div class="row">
 
     <div class="col-12 mx-auto mt-5 ">
@@ -20,27 +20,18 @@
                     </div>
 
                     <div class="row d-flex justify-content-center mb-5 mt-5">
-                        <button type="submit" class="btn btn-primary col-2 mx-5">Ingresar</button>
-                        <a class= "btn btn-primary col-2 mx-5" [routerLink]="['/register']">Registro</a>
+                        <button type="submit" class="btn btn-primary col-2 mx-5 btn-redo">Ingresar</button>
+                        <a class= "btn btn-primary col-2 mx-5 btn-redo" [routerLink]="['/register']">Registro</a>
                     </div>
 
                     <div class="row d-flex justify-content-center">
-                        <button (click)="onGoogleLogin()" class="btn btn-light col-2 "> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
+                        <button (click)="onGoogleLogin()" class="btn btn-light col-2 btn-redo mb-5"> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
                     </div>
 
-                   
-                    
-
                 </form>
-
-            
-                <div class="row col-12 d-flex justify-content-center">
-                    <div class=" mt-3">
-                        <p> ¿No tienes cuenta? <a [routerLink]="['/register']">Registro</a></p>
-                    </div> 
-                </div>
-
+        
             </div>
         </div>
     </div>
+</div>
 </div>
