--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,9 @@
-<p>register works!</p>
 
+<div class="fondoblanco">
+    
+</div>
+
+<div class="container">
 <div class="row">
     <div class="col-12 mx-auto mt-5">
         <div class="card colorcuadro mb-3">
@@ -33,11 +37,12 @@
                     </div>
 
                     <div class="row d-flex justify-content-center mb-5 mt-5">
-                        <button  type= "submit" class="btn btn-primary col-2 mx-5" >Registarse</button>
+                        <button  type= "submit" class="btn btn-primary col-2 mx-5 btn-redo" >Registarse</button>
                     </div>
                 </form>
             </div>
   
         </div>
     </div>
+</div>
 </div>
