--- a/src/app/secciones/guiones/guiones.component.css
+++ b/src/app/secciones/guiones/guiones.component.css
@@ -8,8 +8,13 @@
 }
 
 .izquierda{
+
+  display:flex;
+  justify-content: center;
+
   height: 100vh;
   width: 50%;
+  margin-left: 500px;
 }
 
 .derecha{
@@ -18,7 +23,11 @@
  background-position: center;
  width: 50%;
  height: auto;
- justify-content: space-between;
+ margin-left: 0;
+}
+
+.btn-redo{
+  border-radius: 10px;
 }
 
 .parrafo{
