--- a/src/app/secciones/guiones/guiones.component.html
+++ b/src/app/secciones/guiones/guiones.component.html
@@ -1,12 +1,12 @@
   <section id="pantalla" >
 
     <div class="izquierdo">
-      <div class="icono">
-        <img  src="../../../assets/guiones2 .png" alt="" class="ImgRedonda">
+      <div class="icono mt-5">
+        <img  src="../../../assets/guiones2.png" alt="" class="ImgRedonda">
       </div>
       <div class="botones">
         <ul >
-          <li *ngIf="validar"><button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Editar seccion</button></li>
+          <li *ngIf="validar"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal">Editar seccion</button></li>
 
           <div class="modal fade" id="myModal">
             <div class="modal-dialog">
@@ -21,7 +21,7 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                   <div class="modal_imagen">
-                    <img  class="imagen_cortos" src="../../../assets/guiones2 .png" alt="">
+                    <img  class="imagen_cortos" src="../../../assets/guiones2.png" alt="">
                   </div>
                   <br>
                   <h5 class="modal-title">Buscar ID:</h5>
@@ -48,7 +48,7 @@
             </div>
           </div>
 
-          <li *ngIf="validar"><button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Agregar ejemplo</button></li>
+          <li *ngIf="validar"><button  type="button" class="btn btn-primary btn-redo" data-toggle="modal" data-target="#myModal2">Agregar ejemplo</button></li>
 
           <div class="modal fade" id="myModal2">
             <div class="modal-dialog">
@@ -97,7 +97,7 @@
             </div>
           </div>
 
-          <li *ngIf="validar"> <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal3">Eliminar ejemplo</button></li>
+          <li *ngIf="validar"> <button  type="button" class="btn btn-primary btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar ejemplo</button></li>
 
           <div class="modal fade" id="myModal3">
             <div class="modal-dialog">
