--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar navbar-expand-lg navbar-dark bg-main">
 
     <div>
       <app-menu> </app-menu>
@@ -12,18 +12,19 @@
           <a class="nav-link" routerLink="/login">Login</a>
        </li>
 
+       <li class="nav-item">
+        <a class = "nav-link"> {{user?.email}} </a>
+      </li>
+
         <li class="nav-item " *ngIf = "user">
-          <a href="#" class="nav-link" (click)="onLogout()">Salir de cuenta</a>
+          <a href="#" class="nav-link" (click)="onLogout()">Salir</a>
        </li>
 
         <li class="nav-item " *ngIf = "!user">
           <a class="nav-link" routerLink="/register">Register</a>
        </li>
-
-       <li class="nav-item">
-         <a class = "nav-link"> {{user?.email}} </a>
-       </li>
       </ul>
+       
 
       <ng-template #login >
         <ul class="navbar-nav mx-auto">
