--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,16 @@
+
+
 body{
   background-image:url("assets/fondo.png");
-  height: 900px;
-  width: 100%;
+  /*height: 900px;
+  /*width: 100%;*/
   background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 1440px;
-  font-size: 80%;
+ /* background-position: center top;*/
+  background-size: cover;
+  /*font-size: 80%;*/
 }
+
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
