--- a/src/app/secciones/foro/foro.component.html
+++ b/src/app/secciones/foro/foro.component.html
@@ -39,7 +39,7 @@
                 <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
               </svg>
               <br>
-              Aplicaciones y Entornos virtuales</a>
+              Aplicaciones y <br> Entornos virtuales</a>
           </li>
           <li class="categoria">
             <a class="nav-link" data-toggle="tab" href="#Programacion">
@@ -132,9 +132,13 @@
             <p class="pregunta" >¿Herramientas para hacer un guion? <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
               <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
             </svg> </p>
-            <button class="btn btn-primary" data-toggle="collapse" data-target="#demo">
-              <p class="pregunta" > Responder</p>
-            </button>
+            <div>
+              <div><label for=""></label></div>
+              <div><button class="btn btn-primary" data-toggle="collapse" data-target="#demo">Responder</button></div>
+              <div></div>
+
+            </div>
+
 
             <div id="demo" class="collapse">
               <div class="respuestas">
