--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
- 
+
 <app-navbar> </app-navbar>
+<router-outlet> </router-outlet>
 
-
-<div class="container">
+<!--<div class="container">
     <div class="row">
         <div class="col-12">
              <router-outlet> </router-outlet>
         </div>
     </div>
-</div>
+</div>-->
 
