--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,37 +1,37 @@
+<div class="colorpantalla">
+  <div class="container mb-5 ">
+    <div class="row">
 
+        <div class="col-12 mx-auto mt-5 ">
+            <div class="card colorcuadro">
+                <div class="card-body ">
+                    <h1 class="text-center">Login</h1>
+                    <form  [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
-<div class="container mb-5">
-<div class="row">
+                        <div class="form-group colorblanco d-flex justify-content-center mt-5 col-8">
+                            <input type="email" class="form-control form-control-lg col-11" aria-label="email"
+                            placeholder="Correo" formControlName="email">
+                        </div>
 
-    <div class="col-12 mx-auto mt-5 ">
-        <div class="card colorcuadro">
-            <div class="card-body ">
-                <h1 class="text-center">Login</h1>
-                <form  [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                        <div class="form-group colorblanco d-flex justify-content-center mt-3 col-8">
+                            <input type="password" class="form-control form-control-lg col-11" aria-label="password"
+                            placeholder="Constraseña" formControlName="password">
+                        </div>
 
-                    <div class="form-group colorblanco d-flex justify-content-center mt-5 col-8">
-                        <input type="email" class="form-control form-control-lg col-11" aria-label="email"
-                         placeholder="Correo" formControlName="email">
-                    </div>
+                        <div class="row d-flex justify-content-center mb-5 mt-5">
+                            <button type="submit" class="btn btn-primary col-2 mx-5 btn-redo">Ingresar</button>
+                            <a class= "btn btn-primary col-2 mx-5 btn-redo" [routerLink]="['/register']">Registro</a>
+                        </div>
 
-                    <div class="form-group colorblanco d-flex justify-content-center mt-3 col-8">
-                        <input type="password" class="form-control form-control-lg col-11" aria-label="password"
-                        placeholder="Constraseña" formControlName="password">
-                    </div>
+                        <div class="row d-flex justify-content-center">
+                            <button (click)="onGoogleLogin()" class="btn btn-light col-2 btn-redo mb-5"> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
+                        </div>
 
-                    <div class="row d-flex justify-content-center mb-5 mt-5">
-                        <button type="submit" class="btn btn-primary col-2 mx-5 btn-redo">Ingresar</button>
-                        <a class= "btn btn-primary col-2 mx-5 btn-redo" [routerLink]="['/register']">Registro</a>
-                    </div>
+                    </form>
 
-                    <div class="row d-flex justify-content-center">
-                        <button (click)="onGoogleLogin()" class="btn btn-light col-2 btn-redo mb-5"> <img src="https://img.icons8.com/color/16/000000/google-logo.png"> LOGIN CON GOOGLE</button>
-                    </div>
-
-                </form>
-        
+                </div>
             </div>
         </div>
     </div>
-</div>
+  </div>
 </div>
