--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -8,8 +8,13 @@
 }
 
 .izquierda{
+
+  display:flex;
+  justify-content: center;
+
   height: 100vh;
   width: 50%;
+  margin-left: 500px;
 }
 
 .derecha{
@@ -18,12 +23,16 @@
  background-position: center;
  width: 50%;
  height: auto;
- justify-content: space-between;
+
+}
+
+.btn-redo{
+  border-radius: 10px;
 }
 
 .parrafo{
   text-align: justify;
-  margin: 5px;
+  margin: 2%;
 }
 
 #pantalla{
@@ -43,23 +52,13 @@
 }
 
 .item{
-  border-radius: 10px;
-  margin-top: 5px;
+  border-radius: 5%;
+  margin-top: 1%;
   background: white;
   color: gray;
   flex:none;
   width: calc((100% - 3% )/ 3);
   height: 25vh;
-
-
-  @media screen and (min-width: 600px) {
-    width: calc((100% - 30px) / 4);
-  }
-
-  @media screen and (min-width: 800px) {
-    width: calc((100% - 40px) / 5);
-  }
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -71,11 +70,11 @@
   border:10px solid #666;
 
 }*/
+
 .ImgRedonda{
   border: black 1px solid;
   border-radius: 50%;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin-left: 40%;
   height: 75%;
   width: 75%;
 }
@@ -88,8 +87,9 @@
 
 /*--------------------------------------------------Eliminar----------------------------------------------*/
 .botones ul li{
-  padding:10px;
+  padding:2%;
   display: flex;
+  margin-left: 50%;
   justify-content: center;
   align-items: center;
 }
