--- a/src/app/secciones/animacion/animacion.component.html
+++ b/src/app/secciones/animacion/animacion.component.html
@@ -3,12 +3,12 @@
   <section id="pantalla">
 
     <div class="izquierdo">
-      <div class="icono">
+      <div class="icono  mt-5">
         <img  src="../../../assets/2D.png" alt="" class="ImgRedonda">
       </div>
       <div class="botones">
         <ul >
-          <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Editar</button></li>
+          <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal">Editar</button></li>
 
           <div class="modal fade" id="myModal">
             <div class="modal-dialog">
@@ -51,7 +51,7 @@
             </div>
           </div>
 
-          <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Agregar</button></li>
+          <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal2">Agregar</button></li>
 
           <div class="modal fade" id="myModal2">
             <div class="modal-dialog">
@@ -100,7 +100,7 @@
             </div>
           </div>
 
-          <li *ngIf="user$ | async as user;"> <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal3">Eliminar</button></li>
+          <li *ngIf="user$ | async as user;"> <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar</button></li>
 
           <div class="modal fade" id="myModal3">
             <div class="modal-dialog">
