--- a/src/app/secciones/foro/foro.component.css
+++ b/src/app/secciones/foro/foro.component.css
@@ -29,9 +29,8 @@ main {
 
 
 .categorias{
-  display: flex;
-  justify-content: space-between;
   column-count: 5;
+  margin-right: 10%;
   gap: 20px;
   margin-bottom: 60px;
 
