--- a/src/app/secciones/guiones/guiones.component.html
+++ b/src/app/secciones/guiones/guiones.component.html
@@ -48,7 +48,7 @@
             </div>
           </div>
 
-          <li *ngIf="validar"><button  type="button" class="btn btn-primary btn-redo" data-toggle="modal" data-target="#myModal2">Agregar ejemplo</button></li>
+          <li *ngIf="validar"><button  type="button" class="btn btn-primary  mt-3 btn-redo" data-toggle="modal" data-target="#myModal2">Agregar ejemplo</button></li>
 
           <div class="modal fade" id="myModal2">
             <div class="modal-dialog">
@@ -97,7 +97,7 @@
             </div>
           </div>
 
-          <li *ngIf="validar"> <button  type="button" class="btn btn-primary btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar ejemplo</button></li>
+          <li *ngIf="validar"> <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar ejemplo</button></li>
 
           <div class="modal fade" id="myModal3">
             <div class="modal-dialog">
